--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,7 +22,12 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
-/자료
-
+#자료
 backend/config/.env
 backend/config/config.json
+../backend/config/.env
+../backend/config/config.json
+
+*.env
+
+
