--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,15 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
@@ -15,6 +18,6 @@
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.0-beta11"
   }
 }
